2010-04-21  Xiaomei Ji  <xji@chromium.org>

Reviewed by Dimitri Glazkov

        This patch fixes [chromium] RTL <select> dropdown box expands to right
        instead of left.
        https://bugs.webkit.org/show_bug.cgi?id=37232

        No automatic test is possible.

        * manual-tests/select_dropdown_box_alignment.html: Added.
        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::layout): Adjust the x-axis of dropdown box
        for RTL.


Canonical link: https://commits.webkit.org/49273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57992 268f45cc-cd09-0410-ab3c-d52691b4dbfc